--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -204,6 +204,41 @@ img {
     border-radius: 50%;
 }
 
+/* --- Flexbox --- */
+.container {
+    display: flex;
+    align-items: stretch;
+    flex-direction: row;
+    flex-wrap: wrap;
+	column-gap: 10%;
+	justify-content: space-between;
+}
+
+div.item {
+    flex-basis: 200px;
+}
+
+div.item > * {
+    text-align: justify;
+	width: 100%;
+}
+
+div.item > h2 {
+    margin-top: 1em;
+}
+
+div#profile {
+    flex-grow: 7;
+}
+
+div#webaddress {
+    flex-grow: 1;
+}
+
+div#webaddress > p {
+    text-transform: uppercase;
+}
+
 
 /* Responsive */
 /* Large screens ----------- */
