--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -96,9 +96,8 @@ ul {
 	margin-bottom: 1.5em;
 	margin-top: -1em;
 	font-size: 1.2em;
+	font-weight: 300;
 	color: #535150;
-
-
 }
 
 /*uncomment to get dashes in the list*/
