--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset=utf-8 />
   <title> {% if page.title %} {{ page.title }} | {% endif %} CV</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="media/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print">
 </head>
 <body>
+  <div id="noprint">
+    <button class="btn" id="printPageButton" style="width:100%"onclick="window.print()"><i class="fa fa-download"></i> Download</button>
+  </div>
   <div id="main">
     <div id="content">
     {{ content }}
