--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -51,12 +51,14 @@ table {
 
 /* Style buttons */
 .btn {
-	background-color: DodgerBlue;
+	background-color: white;
 	border: none;
-	color: white;
+	color: rgb(255, 30, 199);
 	padding: 12px 30px;
 	cursor: pointer;
 	font-size: 20px;
+	font-family: Gill Sans Mt,sans-serif;
+
   }
   
   /* Darker background on mouse-over */
