Update Fonts because macs are stupid. :(

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,6 +7,9 @@
   <link href="media/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print">
 </head>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+</style>
 <body>
   <div id="noprint">
     <button class="btn" id="printPageButton" style="width:100%"onclick="window.print()"><i class="fa fa-download"></i> Download</button>
