--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -15,6 +15,9 @@
   <div id="main">
     <div id="content">
     {{ content }}
+    <p>
+      This CV was last updated <script> document.write(new Date().toLocaleDateString('en-us', {year:"numeric", month:"short", day: "2-digit"})); </script>.
+      </p>
     </div>
   </div>
 </body>
