Cuts and CSS update.

--- a/media/benmeller-print.css
+++ b/media/benmeller-print.css
@@ -263,6 +263,14 @@ div#webaddress > p {
     text-transform: uppercase;
 }
 
+div#pubs {
+	flex-grow: 1;
+	width: 100%;
+}
+
+.p.code div#pubs{
+	visibility: hidden;
+}
 
 @page {
     margin: 8%;
