--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -245,11 +245,11 @@ img {
 	justify-content: space-between;
 }
 
-/*div.item {
+div.item {
     flex-basis: 200px;
-}*/
+}
 
-/*div#pubs {
+div#pubs {
 	flex-grow: 1;
 	width: 82%;
 	text-align: left;
@@ -262,7 +262,7 @@ div.item > * {
 
 div.item > h2 {
     margin-top: 1em;
-}*/
+}
 
 
 div#profile {
@@ -302,9 +302,8 @@ and (min-width : 1824px) {
 		font-size: 2em;
 	}
 
-	
 	h2 {
-		font-size: 2em%;
+		font-size: 2em;
 	}
 
 	p {
