--- a/media/benmeller-print.css
+++ b/media/benmeller-print.css
@@ -238,7 +238,8 @@ div.item {
 
 div.item > * {
     width: 100%;
-    text-align: justify;
+    /*text-align: justify;*/
+	text-align: left;
 }
 
 div.item > h2 {
