CV live update.

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -16,7 +16,7 @@
     <div id="content">
     {{ content }}
     <p>
-      This CV was last updated <script> document.write(new Date().toLocaleDateString('en-us', {year:"numeric", month:"short", day: "2-digit"})); </script>. A live version of this CV is available at <a href="https://www.cv.psberge.com">www.cv.psberge.com</a>.
+      This CV was last updated <script> document.write(new Date().toLocaleDateString('en-us', {year:"numeric", month:"short", day: "2-digit"})); </script>. View updates at <a href="https://www.cv.psberge.com">www.cv.psberge.com</a>.
       </p>
     </div>
   </div>
