Page# Fix Take 2

--- a/media/benmeller-print.css
+++ b/media/benmeller-print.css
@@ -275,11 +275,8 @@ div#pubs {
 
 @page {
     margin: 8%;
-	counter-increment: page;
-
-	@bottom-right {
-		padding-right: 20px;
-		content: "Page " counter(page)
+	@bottom-center {
+		content: "Page " counter(page);
 	}
   }
 
